# jenkins_traub

./: .gitignore  CMakeLists.txt  Makefile  README.md  newton.cc  Алгоритм Дженкинса-Трауба.docx
.github/workflows/: auto-clang-format.yml
bench/: CMakeLists.txt  hello_bench.cc  makefile
src/: BaseSolver.h  framework.h  main.cpp  newton.cpp  newton.h  next_step.cpp  next_step.h  synthetic_division.cpp  synthetic_division.h  utils.cpp  utils.h
src/impl_1/: CMakeLists.txt  fin_polynomial_roots_jenkins_traub.cpp  fin_polynomial_roots_jenkins_traub.hpp  find_polynomial_roots_jenkins_traub.cpp  find_polynomial_roots_jenkins_traub.hpp  main.cpp  makefile  polynomial.cpp  polynomial.hpp
src/impl_2/: CMakeLists.txt  JenkinsTraub.cpp  JenkinsTraub.hpp  framework.hpp  main.cpp  makefile  utils.hpp
src/impl_2/.cache/clangd/index/: JenkinsTraub.cpp.3318D564B27ECF7A.idx  JenkinsTraub.hpp.D002AA8DD9BE4532.idx  main.cpp.0E203A3BEADA4243.idx  utils.hpp.559BFA89201EB791.idx
tests/: CMakeLists.txt  hello_test.cc  jenkins_test.cc  makefile  utils_test.cc
tests/impl_1/: CMakeLists.txt  find_polynomial_roots_jenkins_traub_test.cc  makefile  test_utils.hpp
